fix gap-video title font-weight

--- a/src/containers/GAPInsurance/styles.scss
+++ b/src/containers/GAPInsurance/styles.scss
@@ -126,7 +126,7 @@
     line-height: 31px;
     font-size: 26px;
     text-align: center;
-    font-weight: 300;
+    font-weight: 500;
     margin: 0 auto;
     width: 300px;
   }
